[WIP] Fixed layout (height overflow -> html wasn't getting settings right in root + placed the info container of the graphs etc as relative isntead of absolute)

--- a/src/components/admin/AdminCurrentView.module.scss
+++ b/src/components/admin/AdminCurrentView.module.scss
@@ -1,7 +1,7 @@
 .view_container{
-    width:100%;
     height:100%;
     display: flex;
+    flex: 1 1 0px;
     .admin_top_row{
         width: 100%;
         display: flex;
