--- a/src/components/common/BarChart.module.scss
+++ b/src/components/common/BarChart.module.scss
@@ -3,6 +3,11 @@
   background-color: #172B4D;
   color: white;
   padding: 20px 24px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  box-sizing: border-box;
+
   .header{
     width: 100%;
     height: 50px;
@@ -16,5 +21,13 @@
       height:25px;
       margin-left: 15px;
     }
+  }
+  .chart_container{
+    box-sizing: border-box;
+    padding: 18px 24px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: relative;
   }
 }
