--- a/src/global.scss
+++ b/src/global.scss
@@ -1,23 +1,29 @@
+html{
+    height:100%;
+    width:100%;
+}
 :root{
     --error-box: #d1435b;
     --admin-text: #6D6D6D;
     --admin-bg-purple: #5E72E4;
-    html{
-        height:100vh;
-        width:100vw;
+    body,html {
+        width:100%;
+        height:100%;
     }
-    body{
-        height: 100vh;
-        width: 100vw;
+    * {
+        box-sizing: border-box;
+    }
+    body {
+        margin: 0;
+        padding: 0;
     }
     #root{
-        height: 100vh;
-        width: 100vw;
+        height: 100%;
     }
     .container-fluid{
         padding:0;
-        height:100vh;
-        width:100vw;
+        margin:0;
+        height:100%;
     }
     .login-btn{
         width: 60%;
